<resources>
    <string name="app_name">Lab8</string>
    <string name="hello_message">Hello English World,Jay !</string>
    <string name="button_text">I am English Button</string>
    <string name="button_text1">Button Here.</string>
    <string name="check_box">Check this Box..</string>
    <string name="textView">Look At My GUI</string>
    <string name="switch_text">Switch on/off</string>
    <string name="toast_message">Here is more information .</string>
    <string name="hint">Type Here</string>
    <string name="email_hint">Type email here</string>
    <string name="email_message">Enter Your Email Address :</string>
    <string name="password_message">Type Your Password :</string>
    <string name="login_button">Login</string>

    <string name="textProfile">Your Profile</string>
    <string name="textName">Your Name :</string>
    <string name="editName">Enter Your Name</string>
    <string name="textEmail">Your Email :</string>
    <string name="editEmail">Enter Your Email </string>
    <string name="textPicture">Your Picture :</string>
    <string name="textButton">Click the button above to take a picture.</string>

    <string name="goToChat">Go To Chat</string>
    <string name="sendButton">Send</string>
    <string name="receiveButton">Receive</string>
    <string name="typeHereHint">Type Here</string>

    <string name="txtCurrentText">Current Temp</string>
    <string name="txtMinText">Min Temp </string>
    <string name="txtMaxText">Max Temp </string>
    <string name="txtUVText">UV Rating</string>
    <string name="goToForecast">Weather Forecast</string>


    <string name="textViewMsgHere">Message Here</string>
    <string name="textViewId">ID= </string>
    <string name="textViewCheckbox">Is a Send Message</string>
    <string name="buttonHide">Hide</string>

    <string name="testToolbar">Go To Test Toolbar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
