<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:text="@string/textView"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginTop="0dp"
        android:text="@string/button_text1" />


    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/button1"
        android:text="@string/check_box" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignRight="@id/imageButton1"
        android:layout_marginRight="-133dp"
        android:layout_marginBottom="83dp"
        android:text="@string/switch_text" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton1"
        android:ems="10"
        android:hint="Type Here"
        android:inputType="textPersonName" />
</RelativeLayout>