<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="668dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listViewMsg"
            android:layout_width="match_parent"
            android:layout_height="663dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonReceive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/receiveButton">

        </Button>

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="235dp"
            android:layout_height="match_parent"
            android:hint="@string/typeHereHint"
            android:textColor="#020202">

        </EditText>

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sendButton">

        </Button>
    </LinearLayout>


</LinearLayout>