<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    >
    <ImageView
        android:id="@+id/imgWeatherIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@color/colorPrimary"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/txtCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-thin"
        android:text="@string/txtCurrentText"
        android:textSize="50dp"
        android:textStyle="bold" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="70dp"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/txtMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtMinText"
            android:textColor="#E91E63" />

        <Space
            android:layout_width="50dp"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/txtMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtMaxText"
            android:textColor="#0A8BF1" />

    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <TextView
        android:id="@+id/txtUV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtUVText" />

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp"/>

    <ProgressBar
        android:id="@+id/pBar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>